@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.5-06
-Date: 2012-9-20
+Version: 1.5-07
+Date: 2012-9-26
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <suyusung@tsinghua.edu.cn>,
